block texture cache rasterizing reformatting